# JarvisAI

./: .env.example  .gitignore  README.md  config.py  jarvistitle.py  pyproject.toml  requirements.txt  run.py  run_dashboard.py  test.py
app/: __init__.py  auth.py  db.py  deps.py  main.py  models.py
app/core/: __init__.py  health.py  settings.py
app/repositories/: __init__.py  chat_repository.py  protocols.py  user_repository.py
app/services/: __init__.py  brief_service.py  chat_service.py  groq_service.py  protocols.py  realtime_service.py  vector_store.py
app/utils/: log_usage.py  murf_tts.py  ops_state.py  recent_query.py  reminder_parser.py  reminder_worker.py  request_logger.py  time_info.py  weather.py  whisper_stt.py
dashboard/: __init__.py  app.py  config.py  db.py  usage.py
dashboard/templates/: base.html  index.html  login.html
database/chats_data/: 0f2975a0-06d9-4963-af6b-b7f8839f57be.json  128ad6be-6142-476b-9e62-00dc9fadffe7.json  1622c26d-0e81-4d7d-bd7f-5da686316e71.json  1e77b1c7-95e8-4057-bada-72eeff3204cf.json  3bf18d6d-204b-4f15-bc6c-df4485857e58.json  678e97a5-0c32-482a-88a4-a8ca8f044da5.json  6fa35543-1a5f-47a3-b23b-83c8acd43213.json  732c88d3-ed8a-4d52-8340-6aba91080536.json  79ed5d20-4b60-480d-8437-135653334662.json  7e213e37-fed5-47f4-beba-2c1f81b322e3.json  877a2972-128a-4672-b20b-51d79d2d3fa7.json  87b58575-fd99-4f43-99aa-4b40e48aaa39.json  8eea3789-d2a9-49be-90d8-c63b7981b3d7.json  9424433d-787f-4285-9162-f04e8f7389d4.json  (+7 more)
docs/: ARCHITECTURE.md
static/: app.js  index.html
tests/: __init__.py  conftest.py
(+55 files in other folders)
